[package]
name = "lightning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.3", features = ["derive"] }
gilrs = "0.10.5"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-serial = "5.4.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libudev-dev:$CROSS_DEB_ARCH"
]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
