[tool.poetry]
name = "occupancy"
version = "0.1.0"
description = ""
authors = ["Jake Ledoux <contactjakeledoux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
record3d = "^1.4.1"
opencv-python = "^4.11.0.86"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"
open3d = "^0.19.0"
scipy = "^1.15.3"
opencv-contrib-python = "^4.11.0.86"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.12.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
